--- a/src/app/pages/administration/components/sources/sources.component.html
+++ b/src/app/pages/administration/components/sources/sources.component.html
@@ -1,9 +1,5 @@
 <div class="container-title">Gestión de las Fuentes</div>
-<div *ngIf="!showForm">
-    <!-- <div class="container-btn-right">
-        <button (click)="showForm = true;formSource.reset();">Agregar</button>
-    </div> -->
-
+<div>
     <div class="container-responsible-table" [formGroup]="formSource" #tbsource>
         <table mat-table [dataSource]="dataSource" class="table-standart">
             <ng-container matColumnDef="code">
@@ -50,35 +46,9 @@
         </table>
     </div>
     <div class="container-btn-save">
-        <button>Añadir</button>
+        <button (click)="add()">Añadir</button>
         <button (click)="edit()" [disabled]="!editActive">Modificar</button>
         <button>Grabar</button>
     </div>
 </div>
 
-<form [formGroup]="formSource" *ngIf="showForm" class="form-standart">
-    <mat-form-field appearance="outline">
-        <mat-label>Código</mat-label>
-        <input matInput placeholder="Placeholder" formControlName="code">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <input matInput placeholder="Placeholder" formControlName="description">
-    </mat-form-field>
-
-    <div class="cont-slide-tooggle">
-        <mat-slide-toggle [color]="'primary'" formControlName="corrective">
-            Correctiva
-        </mat-slide-toggle>
-
-        <mat-slide-toggle [color]="'primary'" formControlName="upgrade">
-            Oportunidad de Mejora
-        </mat-slide-toggle>
-    </div>
-
-    <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formSource.valid">Guardar</button>
-        <button (click)="showForm = false" type="button">Atras</button>
-    </div>
-</form>
