--- a/src/app/pages/process-indicators/components/formulation-sheet/formulation-sheet.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/formulation-sheet.component.html
@@ -17,41 +17,54 @@
         <div *ngFor="let menu of menuFicha" class="menu"
              (click)="selectOption(menu)"
              [ngClass]="{'menu-active':selectedIdOption === menu.id}">{{menu.name}}</div>
+
+             
      </div>
-     <mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
-        <mat-tab label="DATOS DEL INDICADOR">
-            <div class="cont-display">
-                <app-dates-indicator class="form-tab" (onSave)="setIndicator($event)" (onNext)="nextTab()"></app-dates-indicator>
-                
-            </div>
-        </mat-tab>
-        <mat-tab label="MEDICIÓN Y CONTROL" *ngIf="tabsCompleteds.includes('02')">
-            <div class="cont-display">
-                <app-medition-control class="form-tab" (onSave)="setMedition($event)" (onNext)="nextTab()"></app-medition-control>
-                
-            </div>
-        </mat-tab>
-        <mat-tab label="META DEL INDICADOR" *ngIf="tabsCompleteds.includes('03')">
-            <div class="cont-display">
-                <app-meta-indicator class="form-tab" (onSave)="setMeta($event)" (onNext)="nextTab()"></app-meta-indicator>
-                
-            </div>
-        </mat-tab>
-        <mat-tab label="REPORTE DE RESULTADOS" *ngIf="tabsCompleteds.includes('04')">
-            <div class="cont-display">
-                <app-report-result class="form-tab" (onNext)="nextTab()"></app-report-result>
-            </div>
-        </mat-tab>
-        <mat-tab label="REVISIÓN Y APROBACIÓN DEL INDICADOR" *ngIf="tabsCompleteds.includes('05')">
-            <div class="cont-display">
-                <app-revision-approval class="form-tab"></app-revision-approval>
-                
-            </div>
-        </mat-tab>
-    </mat-tab-group>
+     <div class=wrapper-tabs>
+        <div class="wrapper-tab">
+            <mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
+                <mat-tab label="DATOS DEL INDICADOR">
+                    <div class="cont-display">
+                        <app-dates-indicator class="form-tab" (onSave)="setIndicator($event)" (onNext)="nextTab()"></app-dates-indicator>
+                        
+                    </div>
+                </mat-tab>
+                <mat-tab label="MEDICIÓN Y CONTROL" *ngIf="tabsCompleteds.includes('02')">
+                    <div class="cont-display">
+                        <app-medition-control class="form-tab" (onSave)="setMedition($event)" (onNext)="nextTab()"></app-medition-control>
+                        
+                    </div>
+                </mat-tab>
+                <mat-tab label="META DEL INDICADOR" *ngIf="tabsCompleteds.includes('03')">
+                    <div class="cont-display">
+                        <app-meta-indicator class="form-tab" (onSave)="setMeta($event)" (onNext)="nextTab()"></app-meta-indicator>
+                        
+                    </div>
+                </mat-tab>
+                <mat-tab label="REPORTE DE RESULTADOS" *ngIf="tabsCompleteds.includes('04')">
+                    <div class="cont-display">
+                        <app-report-result class="form-tab" (onNext)="nextTab()"></app-report-result>
+                    </div>
+                </mat-tab>
+                <mat-tab label="REVISIÓN Y APROBACIÓN DEL INDICADOR" *ngIf="tabsCompleteds.includes('05')">
+                    <div class="cont-display">
+                        <app-revision-approval class="form-tab"></app-revision-approval>
+                        
+                    </div>
+                </mat-tab>
+            
+            </mat-tab-group>
+        </div>
+
+        <div class="container-scheme">
+            <app-scheme [indicators]="formIndicator" [medition]="formMedition" [metas]="formMeta"></app-scheme>
+         </div>
+     
+     </div>
+
+
+
  </div>
 
- <div class="container-scheme">
-    <app-scheme [indicators]="formIndicator" [medition]="formMedition" [metas]="formMeta"></app-scheme>
- </div>
+
 </div>
