--- a/src/app/pages/process-indicators/components/formulation-sheet/formulation-sheet.component.scss
+++ b/src/app/pages/process-indicators/components/formulation-sheet/formulation-sheet.component.scss
@@ -17,7 +17,7 @@
 
     mat-tab-group{
         width: 100%;
-        max-width: 800px;
+        max-width: 400px;
     }
 }
 
@@ -38,7 +38,7 @@
         font-weight     : 500;
         cursor          : pointer;
         height          : 65px;
-        padding         : 5px 30px;
+        padding         : 5px 10px;
         box-sizing      : border-box;
         font-size       : 12px;
         text-align      : center;
@@ -77,9 +77,12 @@
     display: flex;
     justify-content: center;
     margin: 25px 0;
-
+    padding-left: 1rem;
     app-scheme {
         width: 100%;
         max-width: 850px;
     }
+}
+.wrapper-tabs{
+    display: flex;
 }
