--- a/src/app/shared/components/table-edit/table-edit.component.html
+++ b/src/app/shared/components/table-edit/table-edit.component.html
@@ -1,40 +1,26 @@
+<table mat-table [dataSource]="_dataSource">
+	<ng-container *ngFor="let c of columns" [matColumnDef]="c.caption">
+		<ng-container>
 
-<button (click)="onAddStudent()">Add Student</button>
-
-<table *ngIf="tableData.length > 0">
-	<thead>
-		<tr>
-			<th *ngFor="let item of tableHeader">{{item.title}}
+			<th mat-header-cell *matHeaderCellDef class="celda">
+				{{c.caption}}
 			</th>
-			<th>
-				<select [(ngModel)] = "addName" (change)="addCol()">
-          <option value=''>Select</option>
-          <option *ngFor='let result of result' [value]="result.Name">{{result.Name}}
-            </option> </select>
-				<!-- <input [(ngModel)] = "addName" (blur)="addCol()"> -->
-      </th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td colspan="4"> <span>Teacher name: Kiran </span>
-				<span>Teacher:adas</span></td>
-		</tr>
-		<tr *ngFor="let item of tableData; let i = index">
-			<td *ngFor="let data of tableHeader">
-				<span *ngIf="data.type!=='label'">
-<input placeholder="{{data.placeholder}}" type="{{data.type}}" [(ngModel)]= "item.name">
-        </span>
-				<p *ngIf="data.type==='label'">{{item[data.name]}}</p>
-			</td>
-			<td>
-				<button (click)="onRemoveStubent(item.studentId)">Remove</button>
-			</td>
-		</tr>
-	</tbody>
+		</ng-container>
+		<td mat-cell *matCellDef="let element">
+
+			<div *ngIf="element[c.field] === element.categoria || element[c.field] === element.categoria2" [style.background-color]="element.color"
+				class="celda-color">
+				{{element[c.field]}}
+			</div>
+
+			<div *ngIf="element[c.field] !== element.categoria && element[c.field] !== element.categoria2" class="celda">
+				{{element[c.field]}}
+			</div>
+
+		</td>
+	</ng-container>
+	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+	<tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+	</tr>
 </table>
-
-<p *ngIf="tableData.length === 0">No student</p>
-
-
-{{tableData | json}}
