--- a/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
+++ b/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="col2">
-        <div class="layer1">
+        <div class="layer1" (click)="setIdOption('1003')">
             <div class="layer2">
                 <div class="layer3">
                     <div>Gestión de Riesgos</div>
