--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,3 +73,15 @@
         padding: 0;
     }
 }
+
+::ng-deep .btn-light-blue{
+    padding: 5px 25px;
+    background-color: #ffffff;
+    border: 1px solid #44acab;
+    cursor: pointer;
+
+    &:hover{
+        background-color: #44acab;
+        color: #ffffff;
+    }
+}
