--- a/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.scss
+++ b/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.scss
@@ -1,3 +1,71 @@
-:host{
+:host {
     width: 100%;
+}
+
+.wrapper-tabs {
+    display: flex;
+}
+
+.container-ficha-revision {
+    display: flex;
+    gap: 20px;
+
+    mat-tab-group{
+        width: 100%;
+        max-width: 400px;
+    }
+}
+
+.menu-process {
+    width     : 100%;
+    max-width : 180px;
+    margin-top: 25px;
+
+    .title-menu {
+        font-size: 12px;
+    }
+
+    .menu {
+        display         : flex;
+        align-items     : center;
+        justify-content : center;
+        background-color: #9bdcfc;
+        font-weight     : 500;
+        cursor          : pointer;
+        height          : 65px;
+        padding         : 5px 10px;
+        box-sizing      : border-box;
+        font-size       : 12px;
+        text-align      : center;
+        border          : 2px solid #000000;
+        border-bottom   : 0;
+
+        &:hover {
+            background-color: #f3ac04;
+        }
+    }
+
+    .menu-active{
+        background-color: #f3ac04;
+    }
+
+    .menu:first-child {
+        border-bottom: 2px;
+    }
+
+    .menu:last-child {
+        border-bottom: 2px solid #000000;
+    }
+
+}
+
+.container-scheme{
+    display: flex;
+    justify-content: center;
+    margin: 25px 0;
+    padding-left: 1rem;
+    app-scheme {
+        width: 100%;
+        max-width: 850px;
+    }
 }
