--- a/src/app/pages/reports-indicators/components/formulation-revision/formulation-revision.component.scss
+++ b/src/app/pages/reports-indicators/components/formulation-revision/formulation-revision.component.scss
@@ -1,3 +1,13 @@
 :host{
     width: 100%;
 }
+
+.frm-inputs-reports{
+    width: 100%;
+    height: fit-content;
+    max-width: 300px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
