--- a/src/app/pages/reports-indicators/components/report-indicators/report-indicators.component.scss
+++ b/src/app/pages/reports-indicators/components/report-indicators/report-indicators.component.scss
@@ -1,3 +1,23 @@
 :host{
     width: 100%;
 }
+
+.frm-inputs-reports{
+    width: 100%;
+    height: fit-content;
+    max-width: 300px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.container-form-pdfindicator{
+    display: flex;
+    gap: 15px;
+}
+
+.report-tb{
+    width: 100%;
+    padding: 5px 10px 0 0;
+}
