--- a/src/app/shared/components/table-edit/table-edit.component.html
+++ b/src/app/shared/components/table-edit/table-edit.component.html
@@ -1,4 +1,14 @@
 <table mat-table [dataSource]="_dataSource">
+	<ng-container [matColumnDef]="'state'">
+		<ng-container>
+			<th mat-header-cell *matHeaderCellDef class="celda">
+				Estado
+			</th>
+		</ng-container>
+		<td mat-cell *matCellDef="let element">
+			<mat-checkbox [checked]="false" [color]="'primary'"></mat-checkbox>
+		</td>
+	</ng-container>
 	<ng-container *ngFor="let c of columns" [matColumnDef]="c.caption">
 		<ng-container>
 
