--- a/src/app/pages/management-indicators/components/management/management.component.html
+++ b/src/app/pages/management-indicators/components/management/management.component.html
@@ -1,1 +1,14 @@
-<p>management works!</p>
+<div class="container-title">GESTIÓN DE INDICADORES</div>
+
+<mat-tab-group class="mat-tab-sunarp">
+    <mat-tab label="PENDIENTES">
+       <app-pending></app-pending>
+    </mat-tab>
+    <mat-tab label="APROBADOS">
+       <app-approved></app-approved>
+    </mat-tab>
+    <mat-tab label="DEVUELTOS">
+       <app-returned></app-returned>
+    </mat-tab>
+
+</mat-tab-group>
