--- a/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.html
+++ b/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container-scheme">
-        <app-scheme [indicators]="formIndicator" [medition]="formMedition" [reportsResults]="formReportsResults"></app-scheme>
+        <app-report-formulation [indicators]="formIndicator" [medition]="formMedition" [reportsResults]="formReportsResults"></app-report-formulation>
     </div>
 
 </div>
