--- a/src/app/pages/reports-indicators/components/formulation-revision/formulation-revision.component.scss
+++ b/src/app/pages/reports-indicators/components/formulation-revision/formulation-revision.component.scss
@@ -11,3 +11,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.container-reports-revision{
+    display: flex;
+    //flex-wrap: wrap;
+    gap: 15px;
+}
