--- a/src/app/pages/maintenance/components/indicator/indicator.component.html
+++ b/src/app/pages/maintenance/components/indicator/indicator.component.html
@@ -1,1 +1,112 @@
-<p>indicator works!</p>
+<div class="container-title">REPORTE DE INDICADORES</div>
+
+<div class="container-indicators">
+    <div class="frm-tb-indicator">
+        <div class="title-form">Agregar Usuario</div>
+    
+        <form [formGroup]="formUser" class="form-standart f-indicator" autocomplete="off">
+            <mat-form-field appearance="outline">
+                <mat-label>Código</mat-label>
+                <input matInput placeholder="Placeholder" formControlName="code">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput placeholder="Placeholder" formControlName="name">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Apellidos</mat-label>
+                <input matInput placeholder="Placeholder" formControlName="lastNames">
+            </mat-form-field>
+        
+            <div class="container-btn-save">
+                <button (click)="save()" type="button" [disabled]="!formUser.valid">Guardar</button>
+            </div>
+        </form>
+        
+        <div class="container-responsible-table" #tbindicator>
+            <table mat-table [dataSource]="dataSource" class="table-standart tbpending">
+                <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef> Código </th>
+                    <td mat-cell *matCellDef="let element;"> 
+                        <div>{{element.code}}</div> 
+                    </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                    <td mat-cell *matCellDef="let element;"> 
+                        <div>{{element.name}}</div> 
+                    </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="lastNames">
+                    <th mat-header-cell *matHeaderCellDef> Apellidos </th>
+                    <td mat-cell *matCellDef="let element;"> 
+                        <div>{{element.lastNames}}</div> 
+                    </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="user">
+                    <th mat-header-cell *matHeaderCellDef> Usuario </th>
+                    <td mat-cell *matCellDef="let element;"> 
+                        <div>{{element.user}}</div> 
+                    </td>
+                </ng-container>
+        
+        
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (click)="selectedRow(i)" [ngClass]="{'active-row-table': indexSelectedRow == i}"></tr>
+            </table>
+        </div>
+        <div class="container-btn-save">
+            <button (click)="add()" type="button" [disabled]="indexSelectedRow === null">Añadir</button>
+        </div>
+    </div>
+
+    <div class="container-responsible-table">
+        <table mat-table [dataSource]="dataSourceIndicators" class="table-standart tbpending">
+            <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef> Código </th>
+                <td mat-cell *matCellDef="let element;"> 
+                    <div>{{element.code}}</div> 
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let element;"> 
+                    <div>{{element.name}}</div> 
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="lastNames">
+                <th mat-header-cell *matHeaderCellDef> Apellidos </th>
+                <td mat-cell *matCellDef="let element;"> 
+                    <div>{{element.lastNames}}</div> 
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="user">
+                <th mat-header-cell *matHeaderCellDef> Usuario </th>
+                <td mat-cell *matCellDef="let element;"> 
+                    <div>{{element.user}}</div> 
+                </td>
+            </ng-container>
+
+            
+        <ng-container matColumnDef="noResults">
+            <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+                Sin data
+            </td>
+        </ng-container>
+    
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row [hidden]="dataSourceIndicators.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
+        </table>
+    </div>
+</div>
+
