--- a/src/app/pages/maintenance/components/offices/offices.component.html
+++ b/src/app/pages/maintenance/components/offices/offices.component.html
@@ -1,1 +1,45 @@
-<p>offices works!</p>
+<div class="container-title">REPORTE DE INDICADORES</div>
+<div class="title-form">Agregar Oficina</div>
+
+<div class="container-responsible-table">
+    <table mat-table [dataSource]="dataSource" class="table-standart tbpending">
+        <ng-container matColumnDef="codeZone">
+            <th mat-header-cell *matHeaderCellDef> Código de zona </th>
+            <td mat-cell *matCellDef="let element;"> 
+                <div>{{element.codeZone}}</div> 
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="codeOffice">
+            <th mat-header-cell *matHeaderCellDef> Código de oficina </th>
+            <td mat-cell *matCellDef="let element;"> 
+                <div>{{element.codeOffice}}</div> 
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="storeCode">
+            <th mat-header-cell *matHeaderCellDef> Código del local de almacen </th>
+            <td mat-cell *matCellDef="let element;"> 
+                <div>{{element.storeCode}}</div> 
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nombre del Área </th>
+            <td mat-cell *matCellDef="let element;"> 
+                <div>{{element.name}}</div> 
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="noResults">
+            <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+                Sin data
+            </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row [hidden]="dataSource.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
+    </table>
+</div>
