--- a/src/app/pages/administration-risk/effectiveness/effectiveness.component.html
+++ b/src/app/pages/administration-risk/effectiveness/effectiveness.component.html
@@ -1,1 +1,4 @@
 <div class="container-title">Efectividad</div>
+<app-table-edit [dataSource]="getDataSource()" [columns]="getColumns()" [state]="true">
+
+</app-table-edit>
