--- a/src/app/pages/administration-risk/treatment/treatment.component.html
+++ b/src/app/pages/administration-risk/treatment/treatment.component.html
@@ -1,1 +1,4 @@
 <div class="container-title">Opciones de tratamiento</div>
+<app-table-edit [dataSource]="getDataSource()" [columns]="getColumns()" [state]="true">
+
+</app-table-edit>
