agregado de filtro en list action-authorization

--- a/src/app/shared/components/report-formulation/report-formulation.component.html
+++ b/src/app/shared/components/report-formulation/report-formulation.component.html
@@ -134,6 +134,12 @@
 
     <div class="metas" *ngIf="reportsResults">
         <div class="cont-gray div-100">REPORTE DE RESULTADOS</div>
+        <div></div>
+    </div>
+
+    <div class="analisis" *ngIf="reportsResults">
+        <div class="cont-gray div-100">ANÁLISIS DE RESULTADOS</div>
+        <div></div>
     </div>
 
 </div>
