--- a/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
+++ b/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
@@ -39,11 +39,22 @@
     
         <ng-container matColumnDef="area">
             <th mat-header-cell *matHeaderCellDef> Area </th>
-            <td mat-cell *matCellDef="let element"> {{element.area}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.area.name}} </td>
         </ng-container>
     
+        <ng-container matColumnDef="state">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="noResults">
+            <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+                No se encontraron resultados.
+            </td>
+        </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row [hidden]="dataSource.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
     </table>
 </div>
