--- a/src/app/pages/process-risk/components/asset-inventory/asset-inventory.component.html
+++ b/src/app/pages/process-risk/components/asset-inventory/asset-inventory.component.html
@@ -1,1 +1,96 @@
 <div class="container-title">Inventario de Activos</div>
+
+<div class="dates-assets">
+    <div class="rows-assets">
+        <div class="row01-assets">
+            <div>UNIDAD DE ORGANIZACIÓN O FUNCIONAL</div>
+            <div></div>
+        </div>
+        <div class="row02-assets">
+            <div>PROCESO:</div>
+            <div></div>
+        </div>
+        <div class="row03-assets">
+            <div>FECHA:</div>
+            <div></div>
+        </div>
+    </div>
+    <div class="user">
+        Luis Pérez: Oficial
+    </div>
+</div>
+
+<div class="container-responsible-table">
+    <table mat-table [dataSource]="dataSource" class="table-standart tbasset-inventory">
+      <ng-container matColumnDef="subProcess">
+        <th mat-header-cell *matHeaderCellDef> Sub proceso </th>
+        <td mat-cell *matCellDef="let element"> {{element.subProcess}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="codeAsset">
+        <th mat-header-cell *matHeaderCellDef> Código del activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.codeAsset}} </td>
+      </ng-container>
+  
+  
+      <ng-container matColumnDef="nameAsset">
+        <th mat-header-cell *matHeaderCellDef> Nombre del Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.nameAsset}} </td>
+      </ng-container>
+  
+  
+      <ng-container matColumnDef="descriptionAsset">
+        <th mat-header-cell *matHeaderCellDef> Descripción del Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.descriptionAsset}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="typeAsset1">
+        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.typeAsset1}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="typeAsset2">
+        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.typeAsset2}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="typeAsset3">
+        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.typeAsset3}} </td>
+      </ng-container>
+ 
+      <ng-container matColumnDef="typeAsset4">
+        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.typeAsset4}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="specificLocation">
+        <th mat-header-cell *matHeaderCellDef> Ubicación especifica </th>
+        <td mat-cell *matCellDef="let element"> {{element.specificLocation}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="assetValuation">
+        <th mat-header-cell *matHeaderCellDef> Valoración del Activo </th>
+        <td mat-cell *matCellDef="let element"> {{element.assetValuation}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="noResults">
+        <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+          No se encontraron resultados.
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-footer-row [hidden]="dataSource.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
+    </table>
+  </div>
+
+  <div class="cont-assets-btn">
+    <div class="col-left-btn">
+      <button type="button" class="btn-light-blue">Anadir</button>
+      <button type="button" class="btn-light-blue">Modificar</button>
+      <button type="button" class="btn-light-blue">Eliminar</button>
+    </div>
+    <button type="button" class="btn-light-blue">Enviar</button>
+  </div>
