--- a/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.html
+++ b/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.html
@@ -1,1 +1,80 @@
 <div class="container-title">Tratamiento de Riesgos</div>
+
+<div class="dates-risk-treatment">
+    <div class="rows-risk">
+        <div class="row01-risk">
+            <div>UNIDAD DE ORGANIZACIÓN O FUNCIONAL</div>
+            <div>Unidad de Planeamiento, Presupuesto y Modernización</div>
+        </div>
+        <div class="row02-risk">
+            <div>PROCESO:</div>
+            <div>Gestión de Planeamiento y Presupuesto / Gestión de la Modernización</div>
+        </div>
+        <div class="row03-risk">
+            <div>FECHA:</div>
+            <div>23/08/2022</div>
+        </div>
+    </div>
+    <div class="user">
+        Luis Pérez: Oficial
+    </div>
+</div>
+
+<div class="container-responsible-table cont-risk">
+    <table mat-table [dataSource]="dataSource" class="table-standart tbrisk-treatment">
+
+        <ng-container matColumnDef="subProcess">
+            <th mat-header-cell *matHeaderCellDef> Sub proceso </th>
+            <td mat-cell *matCellDef="let element"> {{element.subProcess}} </td>
+        </ng-container>
+
+
+
+        <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> Tipo </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="riskCode">
+            <th mat-header-cell *matHeaderCellDef> Código del Riesgo u Oportunidad </th>
+            <td mat-cell *matCellDef="let element"> {{element.riskCode}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="riskName">
+            <th mat-header-cell *matHeaderCellDef> Nombre del Riesgo / Oportunidad </th>
+            <td mat-cell *matCellDef="let element"> {{element.riskName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="riskValue">
+            <th mat-header-cell *matHeaderCellDef> Valor de Riesgo Residual (Antes del tratamiento) </th>
+            <td mat-cell *matCellDef="let element"> {{element.riskValue}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="residualRisk">
+            <th mat-header-cell *matHeaderCellDef> Riesgo Residual </th>
+            <td mat-cell *matCellDef="let element">
+                {{element.residualRisk ? 'Si' : 'No'}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="noResults">
+            <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+                No se encontraron resultados.
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row [hidden]="dataSource.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
+    </table>
+</div>
+
+<div class="cont-risk-btn">
+    <div class="col-left-btn">
+        <button type="button" class="btn-light-blue">Anadir</button>
+        <button type="button" class="btn-light-blue">Modificar</button>
+        <button type="button" class="btn-light-blue">Eliminar</button>
+    </div>
+    <button type="button" class="btn-light-blue">Preaprobar</button>
+</div>
