agregado de botones y check en table edit

--- a/src/app/pages/administration-risk/impact/impact.component.html
+++ b/src/app/pages/administration-risk/impact/impact.component.html
@@ -2,3 +2,8 @@
 <app-table-edit [dataSource]="getDataSource()" [columns]="getColumns()" [state]="true">
 
 </app-table-edit>
+<div class="container-btn-save">
+    <button>Añadir</button>
+    <button>Modificar</button>
+    <button>Grabar</button>
+</div>
