--- a/src/app/shared/components/table-edit/table-edit.component.scss
+++ b/src/app/shared/components/table-edit/table-edit.component.scss
@@ -14,3 +14,10 @@
     align-items: center;
     text-shadow: 0 0 2px #000;
 }
+
+.td-check{
+    input{
+        width: 18px;
+        height: 18px;
+    }
+}
