--- a/src/app/shared/components/table-edit/table-edit.component.html
+++ b/src/app/shared/components/table-edit/table-edit.component.html
@@ -5,8 +5,8 @@
 				Estado
 			</th>
 		</ng-container>
-		<td mat-cell *matCellDef="let element">
-			<mat-checkbox [checked]="false" [color]="'primary'"></mat-checkbox>
+		<td mat-cell *matCellDef="let element" class="td-check">
+			<input type="checkbox">
 		</td>
 	</ng-container>
 	<ng-container *ngFor="let c of columns" [matColumnDef]="c.caption">
